# Battle-Pong

./: .gitignore  CMakeLists.txt  Credits.txt  Main.cpp  README.md  gcc.sh
BattlePong/: CMakeLists.txt  Main.cpp
BattlePong/include/: Arguments.h  CMakeLists.txt  ErrorCodes.h  Game.h  Log.h  Logging.h  Macros.h  PaddleHud.h  ResourceManager.h  SFMLFunctions.h  Server.h  Settings.h  TGUIFunctions.h
BattlePong/include/Box2D/: Box2DFunctions.h  CMakeLists.txt  ContactListener.h  DebugDraw.h
BattlePong/include/Events/: BallCollision.h  CMakeLists.txt  EventBase.h  EventId.h  EventManager.h  Events.h  GoalCollision.h  Id.h  LeftPaddleGoal.h  OnCheck.h  PaddleCollision.h  RightPaddleGoal.h
BattlePong/include/Events/Listeners/: BallCollisionListener.h  CMakeLists.txt  GoalCollisionListener.h  MusicListener.h  RightPaddleGoalListener.h  SoundListener.h
BattlePong/include/Gui/: ButtonId.h  CMakeLists.txt  CheckboxId.h  ComboId.h  ControlPanel.h  CreditsPanel.h  CustomPanel.h  GuiId.h  GuiManager.h  HostPanel.h  IntroPanel.h  PaddleHud.h  PlayPanel.h  ScorePanel.h  SliderId.h  SoundPanel.h  TimerPanel.h
BattlePong/include/Gui/InfoPanel/: CMakeLists.txt  ControlPanel.h  DevPanel.h  GeneralPanel.h  InfoPanel.h  NetworkPanel.h  SoundPanel.h  VideoPanel.h
BattlePong/include/Gui/IntroState/: CMakeLists.txt  ConnectPanel.h  ControlPanel.h  DevPanel.h  GeneralPanel.h  HostPanel.h  (+5 more)
BattlePong/include/Input/: AI.h  CMakeLists.txt  Input.h  PlayerInput.h
BattlePong/include/Objects/: Ball.h  CMakeLists.txt  Frame.h  Goal.h  ObjectBase.h  ObjectId.h  Objects.h  Paddle.h  PaddleStop.h  PongFrame.h  Wall.h
BattlePong/include/Resources/: CMakeLists.txt  MusicId.h  Resource Holder.h  ResourceManager.h  SoundId.h  TextureId.h
BattlePong/include/Sounds/: CMakeLists.txt  Id.h
BattlePong/include/States/: '  CMakeLists.txt  ClientPlayState.h  ControlState.h  CreditsState.h  DemoState.h  Id.h  IntroState.h  MusicState.h  PlayState.h  SingleplayerState.h  StateBase.h  StateId.h  States.h
BattlePong/src/: Arguments.cpp  CMakeLists.txt  Debugging.cpp  Game.cpp  PaddleHud.cpp  ResourceManager.cpp  SFMLFunctions.cpp  Settings.cpp  TGUIFunctions.cpp
BattlePong/src/Box2D/: CMakeLists.txt  ContactListener.cpp  DebugDraw.cpp
BattlePong/src/Events/: BallCollision.cpp  CMakeLists.txt  Click.cpp  EventBase.cpp  GoalCollision.cpp  LeftPaddleGoal.cpp  OnCheck.cpp  PaddleCollision.cpp  RightPaddleGoal.cpp
BattlePong/src/Gui/: CMakeLists.txt  ConnectPanel.cpp  ControlPanel.cpp  CreditsPanel.cpp  CustomPanel.cpp  DevPanel.cpp  GeneralPanel.cpp  GuiManager.cpp  HostPanel.cpp  IntroGui.cpp  IntroPanel.cpp  MultiplayerPanel.cpp  OptionsPanel.cpp  PaddleHud.cpp  PlayPanel.cpp  ScorePanel.cpp  SoundPanel.cpp  TimerPanel.cpp  ]
BattlePong/src/Input/: AI.cpp  CMakeLists.txt  Input.cpp  PlayerInput.cpp
BattlePong/src/Objects/: Ball.cpp  CMakeLists.txt  Frame.cpp  Goal.cpp  Paddle.cpp  PaddleStop.cpp  PongFrame.cpp  Wall.cpp
BattlePong/src/Resources/: CMakeLists.txt  ResourceManager.cpp
BattlePong/src/States/: '  :w  CMakeLists.txt  ClientPlayState.cpp  ConnectState.cpp  ControlState.cpp  CreditsState.cpp  DemoState.cpp  HostPlayState.cpp  HostState.cpp  Id.cpp  IntroState.cpp  IntroState.cpp~  MusicState.cpp  PaddleState.cpp  PlayState.cpp  SingleplayerState.cpp  StateBase.cpp
include/: Ball.h  BallCollisionListener.h  Box2DShape.h  CMakeLists.txt  Client.h  DebugDraw.h  Game.h  Input.h  Logging.h  MusicListener.h  ObjectBase.h  OptionsState.h  Paddle.h  PlayerInput.h  Resource Holder.h  ResourceManager.h  SFMLFunctions.h  Server.h  Settings.h  Wall.h  sfFixture.h
include/Box2D/: Box2DFunctions.h  ContactListener.h  DebugDraw.h
include/Events/: BallCollision.h  CMakeLists.txt  ChangeState.h  Click.h  EventBase.h  EventManager.h  Events.h  Id.h  Pop.h
include/Events/Listeners/: BallCollisionListener.h  CMakeLists.txt  GoalCollisionListener.h  LeftPaddleGoalListener.h  RightPaddleGoalListener.h  SoundListener.h
include/Gui/: CMakeLists.txt  ControlPanel.h  GuiManager.h  IntroGui.h  MultiplayerPanel.h  OptionsGui.h  OptionsPanel.h
include/Input/: AI.h  CMakeLists.txt  Input.h
include/Objects/: Ball.h  CMakeLists.txt  Goal.h  ObjectBase.h  Paddle.h  Wall.h
include/Sounds/: Id.h
include/States/: CMakeLists.txt  ClientPlayState.h  ConnectState.h  ControlState.h  DemoState.h  HostPlayState.h  HostState.h  Id.h  IntroState.h  MultiPlayerState.h  MultiplayerControlsState.h  MultiplayerState.h  MusicState.h  OptionsState.h  PaddleState.h  PlayState.h  SingleplayerState.h  StateBase.h  States.h
src/: AI.cpp  Ball.cpp  BallCollisionListener.cpp  Box2DFunctions.cpp  Box2DShape.cpp  CMakeLists.txt  Client.cpp  ContactListener.cpp  DebugDraw.cpp  Game.cpp  Input.cpp  Logging.cpp  MusicListener.cpp  ObjectBase.cpp  OptionsState.cpp  Paddle.cpp  PaddleHud.cpp  PlayerInput.cpp  ResourceManager.cpp  SFMLFunctions.cpp  Server.cpp  Settings.cpp  SoundListener.cpp  Wall.cpp  sfFixture.cpp
src/Box2D/: Box2DFunctions.cpp  CMakeLists.txt  ContactListener.cpp  DebugDraw.cpp
src/Events/: BallCollision.cpp  CMakeLists.txt  ChangeState.cpp  Click.cpp  EventBase.cpp  Id.cpp  MusicVolumeChanged.cpp  PlayMusic.cpp  PlaySound.cpp  Pop.cpp  PushState.cpp  SoundVolumeChanged.cpp
src/Events/Listener/: BallCollisionListener.cpp  CMakeLists.txt  GoalCollisionListener.cpp  LeftPaddleGoalListener.cpp  MusicListener.cpp  RightPaddleGoalListener.cpp  SoundListener.cpp
src/Gui/: CMakeLists.txt  ControlPanel.cpp  CustomPanel.cpp  DevPanel.cpp  GeneralPanel.cpp  GuiManager.cpp  MultiplayerPanel.cpp  OptionsGui.cpp  OptionsPanel.cpp  SoundPanel.cpp
src/Input/: AI.cpp  CMakeLists.txt  PlayerInput.cpp
src/Objects/: Ball.cpp  CMakeLists.txt  Goal.cpp  Paddle.cpp  Wall.cpp
src/States/: .StateBase.cpp.swp  CMakeLists.txt  ClientPlayState.cpp  ConnectState.cpp  ControlState.cpp  DemoState.cpp  HostPlayState.cpp  HostState.cpp  IntroState.cpp  MultiPlayerControlsState.cpp  MultiPlayerState.cpp  MultiplayerState.cpp  MusicState.cpp  OptionsState.cpp  PaddleState.cpp  PlayState.cpp  SingleplayerState.cpp  StateBase.cpp
(+867 files in other folders)
